--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ Therefore I try to learn something new and search new solutions for routine-task
             </div>
             <div>
                 <h3>skills</h3>
-                <ul>
-                    <li>it</li>
+                    <h4>it</h4>
                     <ul>
                         <li>git | github | markdown</li>
                         <li>figma</li>
@@ -40,18 +39,16 @@ Therefore I try to learn something new and search new solutions for routine-task
                         <li>java script basics</li>
                         <li>python basics</li>
                     </ul>
-                    <li>arch</li>
+                    <h4>arch</h4>
                     <ul>
                         <li>rhinoceros + grasshopper</li>
                         <li>adobe photoshop | illustrator | indesign | premiere pro</li>
                         <li>qgis</li>
                     </ul>
-                </ul>
             </div>
             <div>
                 <h3>education and courses</h3>
-                <ul>
-                    <li>it</li>
+                    <h4>it</h4>
                     <ul>
                         <li>2022 - in progress | Rolling Scopes School | Javascript/Front-End Program #stage0</li>
                         <li>2021 | Encode | Create a website</li>
@@ -59,11 +56,10 @@ Therefore I try to learn something new and search new solutions for routine-task
                         <li>2021 | Hexlet | CSS for beginner</li>
                         <li>2021 | Hexlet | JavaScript for beginner</li>
                     </ul>
-                    <li>arch</li>
+                    <h4>arch</h4>
                     <ul>
                         <li>2020 | SPbGASU | architect | master's degree</li>
                     </ul>
-                </ul>
             </div>  
             <div>
                 <h3>experience</h3>
