--- a/index.html
+++ b/index.html
@@ -1,71 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>  
-<title>cv</title>
+<html>
+<head>
+<title>Page Title</title>
 </head>
 <body>
-<main class="main">
-<div>
-<h1>Tatiana Antos</h1>
-<p class="italic">Junior Frontend Developer</p>
-</div>
-<div>
-<h3> contact information</h3>
-<p>e-mail: tiantos@gmail.com</p>
-<p>github: https://github.com/tiantos</p>
-</div>         
-<div>
-<p> Currently working as an architect and urban planner. 
-Interested in parametric design, improving workflow by integration of coding, plugins etc. 
-Therefore I try to learn something new and search new solutions for routine-tasks)
-</p>
-</div>
-<div>
-<h3>skills</h3>
-<h4>it</h4>
-<ul>
-<li>git | github | markdown</li>
-<li>figma</li>
-<li>visual studio code</li>
-<li>html | css basics</li>
-<li>java script basics</li>
-<li>python basics</li>
-</ul>
-<h4>arch</h4>
-<ul>
-<li>rhinoceros + grasshopper</li>
-<li>adobe photoshop | illustrator | indesign | premiere pro</li>
-<li>qgis</li>
-</ul>
-</div>
-<div>
-<h3>education and courses</h3>
-<h4>it</h4>
-<ul>
-<li>2022 - in progress | Rolling Scopes School | Javascript/Front-End Program #stage0</li>
-<li>2021 | Encode | Create a website</li>
-<li>2021 | Hexlet | HTML for beginner</li>
-<li>2021 | Hexlet | CSS for beginner</li>
-<li>2021 | Hexlet | JavaScript for beginner</li>
-</ul>
-<h4>arch</h4>
-<ul>
-<li>2020 | SPbGASU | architect | master's degree</li>
-</ul>
-</div>  
-<div>
-<h3>experience</h3>
-<p>I don't have any it experience, although I have done some python scripts for grasshopper and qgis to reduce my master's workflow.</p>
-</div>
-<div>
-<h3>languages</h3>
-<ul>
-<li>russian | native</li>
-<li>english | B2-C1</li>
-<li>italiano | A2</li>
-<li>deutch | A2</li>
-</ul>
-</div>
-</main>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 </body>
 </html>
